# store-sales

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 00_interim_data_analysis.ipynb  01_interim_data_analysis.ipynb  02_interim_data_analysis.ipynb  03_preprocessing.ipynb  holidays_events_profiling_report.html
store_sales/: __init__.py  config.py  dataset.py  features.py  plots.py
store_sales/modeling/: predict.py  train.py
